# miniRT

./: .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
files/: Makefile  default_world.rt  example.rt  pdf_scene.rt  test.rt  valgrind.supp
files/includes/: constants.h  miniRT.h  miniRT_cmd.h  miniRT_cmd_maths.h  miniRT_define.h  miniRT_include.h  miniRT_struct.h  miniRT_test.h  structs.h
files/srcs/: main.c  main_tests.c  test.c
files/srcs/args/: args_check.c
files/srcs/color/: color_new.c  color_operations.c
files/srcs/data/: data_free.c  data_initialize.c
files/srcs/double/: double_comparaisons.c
files/srcs/engine/: main_loop.c  viewport.c
files/srcs/events/: event_key.c  event_resize.c
files/srcs/file/: file_check.c  file_save.c
files/srcs/free/: parsing_free.c  scene_free.c
files/srcs/image/: pixel_manipulation.c  trgb_utils.c
files/srcs/inits/: camera_init.c  material_init.c
files/srcs/intersections/: cylinder_intersection.c  hit.c  intersect.c  plane_intersection.c  sphere_intersection.c
files/srcs/matrix/: matrix.c  matrix_cofactor.c  matrix_comparaisons.c  matrix_create.c  matrix_deteminant.c  matrix_determinant.c  matrix_inverse.c  matrix_invert.c  matrix_minor.c  matrix_operations.c  matrix_reflection.c  matrix_rotation.c  matrix_scalar.c  matrix_scale.c  matrix_shearing.c  matrix_skew_sym.c  matrix_submatrix.c  matrix_transform.c  matrix_translation.c  matrix_transpose.c
files/srcs/mlx/: mlx_exit.c  mlx_initialize.c  mlx_loop.c  mlx_pixel_put.c  mlx_render.c
files/srcs/normal/: normal_at.c  reflect.c
files/srcs/parsing/: material_init.c  parse_camera.c  parse_hittable.c  parse_lighting.c  parse_sub_components.c  parse_subcomponents.c  parse_transforms.c  parsing.c
files/srcs/point/: operations.c  point_comparaisons.c  point_create.c  point_matrix_operations.c  point_operations.c  point_scalar.c  point_vector_operations.c
files/srcs/points/: point_comparaisons.c  point_create.c  point_functions.c  point_operations.c  point_scalar.c
files/srcs/ray/: ray_create.c  ray_position.c  ray_transform.c
files/srcs/render/: lighting.c  render_frame.c  render_scene.c
files/srcs/shearing/: shearing_create.c  shearing_matrix.c
files/srcs/tests/: do_tests.c  test_hit.c  test_lighting.c  test_matrix.c  test_precompute.c  test_reflect.c  test_shading.c  test_shadow.c  test_sphere_intersection.c  test_sphere_normal.c  test_transform.c  test_tuple.c
files/srcs/tuple/: tuple_functions.c  tuple_new.c  tuple_operations.c  tuple_transform.c
files/srcs/tuples/: tuple_comparaisons.c  tuple_create.c  tuple_functions.c  tuple_operations.c  tuple_scalar.c
files/tests/: test.c
includes/: miniRT.h  miniRT_cmd.h  miniRT_define.h  miniRT_include.h  miniRT_struct.h  miniRT_test.h  miniRT_tuple.h  structs.h
scenes/: c06.rt
srcs/: free.c  hooks.c  main.c  main_tests.c
srcs/data/: data_initialize.c
srcs/events/: event_key.c
srcs/file/: file_check.c
srcs/free/: parsing_free.c
srcs/inits/: minirt_init.c
srcs/intersections/: cylinder_intersection.c  intersect.c  sphere_intersection.c
srcs/matrix/: matrix_cofactor.c  matrix_create.c  matrix_rotation.c  matrix_scale.c  matrix_skew_sym.c  matrix_translation.c
srcs/mlx/: mlx_exit.c  mlx_initialize.c  mlx_render.c
srcs/parsing/: parse_camera.c  parse_hittable.c  parse_lighting.c  parse_subcomponents.c  parse_transforms.c  parsing.c
srcs/tests/: test_lighting.c  test_matrix.c  test_reflect.c
todo/: idee_optim  process.txt  to_do.txt
(+16 files in other folders)
